# Trabalho-DCC059-2024-3

./: .gitignore  CMakeLists.txt  Desc.txt  Descricao.txt  Grafo.txt  GrafoOut.txt  README.md  data_strc.cpp  data_strc.h  grafo.cpp  grafo.h  grafo_lista.cpp  grafo_lista.h  grafo_matriz.cpp  grafo_matriz.h  main.cpp
entradas/: Grafo.txt  GrafoNd.txt  grafo5k.txt  grafo_5000.txt  grafo_menor.txt
include/: data_strc.h  grafo.h  grafo_lista.h  grafo_matriz.h
src/: data_strc.cpp  grafo.cpp  grafo_lista.cpp  grafo_matriz.cpp
